2008-02-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/usr_files.h, src/user_files.h (user_file_remove): New, used
	to easily remove files from the per-user state directory.
	(user_file_get_state_dir_path): Create dir if it doesn't exist.
	(user_file_open_for_read): Don't take care of creating the
	directory, as user_file_get_state_dir_path will do the work.
	(user_file_open_for_write): Likewise.

	* src/update-notifier.c (update_seen_notifications): Added a new
	parameter (upno), to allow hiding the icon after duplicating the
	notification files. Added some extra checks too.
	(show_notification_menu_item_activated): Pass the upno ref to
	update_seen_notifications.
	(reject_notification_menu_item_activated): Likewise.
	(update_state): Initialize some pointers to NULL.
	(set_icon_visibility): Force the "unpressed state" for the status
	bar icon when changing the state.
	(check_for_notifications_thread): Fixed a problem based on opening
	a file for reading when writing, by libculr, was required. Also
	added extra logic to validate the downloaded file to be sure about
	if it's or not a valid notification file before writing it to
	disk.

	* src/log.cc (show_log_dialog_flow): Changed the management of the
	dialog to use gtk_dialog_run instead of connecting the "response"
	signal, to avoid HAM crashing under certain conditions (N81056).

2008-02-21  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src repo.cc (add_entry) : Use HamLongLabel instead of GtkLabel.

	* ham-long-label.[ch] : Composite widget that makes it possible
	to show long strings (i.e. URLs) in a single line; if the text
	is too long, two buttons allow the user to move back and forth
	so they can see the whole string of text. It inherits GtkHBox.
	(ham_long_label_new) : Creates a HamLongLabel with the given text
	(ham_long_label_new_with_markup) : Creates a #HamLongLabel with the
	given Pango markup.
	(ham_long_label_set_text) : Sets the given text in a HamLongLabel.